--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
           <artifactId>toml4j</artifactId>
           <version>0.7.2</version>
       </dependency>
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>32.0.0-jre</version>
+      </dependency>
   </dependencies>
     <build>
         <plugins>
